snapping not working if invisible object is between you and the target #62125

Closed
opened 2019-03-02 16:26:32 +01:00 by Daniel Grauer · 9 comments
Member

System Information
Operating system: windows 10
Graphics card: amd 480

Blender Version
Broken: version: 2.80 (sub 45), branch: master, commit date: 2019-03-02 00:57, hash: 490a385c81
Worked: 2.79b release

Short description of error
when trying to snap a vertex and the object is inside an other object that is in draw bound/wireframe mode snapping is not working

Exact steps for others to reproduce the error

do steps 1 and 2 on a new blend file or download the blend file and skip to step 3.
vertex_snapping.blend

  1. create a cube and set the display mode to bounds
    Screen Shot 03-02-19 at 04.13 PM.PNG

  2. create a 2nd object inside that first cube and choose vertex snap mode
    Screen Shot 03-02-19 at 04.14 PM.PNG

  3. enter edit mode on the 2nd object and try to snap a vertex to another vertex on that same object.

  4. notice that this does not work as long as the first object we created and put into bound draw mode is between the snapping object and the camera view.

**System Information** Operating system: windows 10 Graphics card: amd 480 **Blender Version** Broken: version: 2.80 (sub 45), branch: master, commit date: 2019-03-02 00:57, hash: 490a385c8124 Worked: 2.79b release **Short description of error** when trying to snap a vertex and the object is inside an other object that is in draw bound/wireframe mode snapping is not working **Exact steps for others to reproduce the error** do steps 1 and 2 on a new blend file or download the blend file and skip to step 3. [vertex_snapping.blend](https://archive.blender.org/developer/F6746135/vertex_snapping.blend) 1. create a cube and set the display mode to bounds ![Screen Shot 03-02-19 at 04.13 PM.PNG](https://archive.blender.org/developer/F6746139/Screen_Shot_03-02-19_at_04.13_PM.PNG) 2. create a 2nd object inside that first cube and choose vertex snap mode ![Screen Shot 03-02-19 at 04.14 PM.PNG](https://archive.blender.org/developer/F6746140/Screen_Shot_03-02-19_at_04.14_PM.PNG) 3. enter edit mode on the 2nd object and try to snap a vertex to another vertex on that same object. 4. notice that this does not work as long as the first object we created and put into bound draw mode is between the snapping object and the camera view.
Author
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2019-03-04 11:15:41 +01:00

I should note that this also happens when display is set to Wire too.

I should note that this also happens when display is set to `Wire` too.

I've uploaded a fix: D4493

I've uploaded a fix: [D4493](https://archive.blender.org/developer/D4493)

This issue was referenced by 81a7f6c848

This issue was referenced by 81a7f6c84844a7eafc33711c1fb792e8e0bbc459

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @crantisz

Added subscriber: @crantisz

It's looks like it doesn't fixed:

Peek 2019-03-27 09-43.gif

System Information
Operating system: Linux-4.15.0-46-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-26 18:57, hash: 337eb8c1de

It's looks like it doesn't fixed: ![Peek 2019-03-27 09-43.gif](https://archive.blender.org/developer/F6889446/Peek_2019-03-27_09-43.gif) **System Information** Operating system: Linux-4.15.0-46-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-26 18:57, hash: `337eb8c1de`

Yes it is fixed. The issues was the it would snap to wireframe faces. Now it doesn't snap to wireframe faces (as you demonstrated in that video).

Yes it is fixed. The issues was the it would snap to wireframe faces. Now it doesn't snap to wireframe faces (as you demonstrated in that video).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62125
No description provided.